# soft-wer

./: .gitignore  README.md  pyproject.toml  submit_soft_wer_vllm.sh
src/soft_wer/: __init__.py  cli.py  core.py  vllm_judge.py
