[project]
name = "soft-wer"
version = "0.1.0"
description = "Word error rate that forgives semantically-equivalent mismatched spans, judged by an in-process vLLM model."
requires-python = ">=3.11"
dependencies = [
    "jiwer>=4.0.0",
    "tqdm>=4.66",
    "vllm>=0.11.0",
]

[project.scripts]
soft-wer = "soft_wer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soft_wer"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
